diabled doclint to be able to build javadoc with java8, fixed site and asciidotor plugins, updated parent pom